# r2vm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  devtree.dts
.cargo/: config
.github/workflows/: ci.yml
dbt/: Cargo.toml  build.rs
dbt/src/: lib.rs  main.rs
dbt/src/emu/: abi.rs  loader.rs  mod.rs  safe_memory.rs  syscall.rs
dbt/src/io/: console.rs  mod.rs
dbt/src/io/block/: mod.rs  shadow.rs
dbt/src/io/virtio/: block.rs  mmio.rs  mod.rs  queue.rs  rng.rs
dbt/src/riscv/: csr.rs  decode.rs  disasm.rs  interp.rs  mod.rs  op.rs
dbt/src/util/: int.rs  mod.rs  softfp.rs  split_int.rs
docs/: iomem.md
include/emu/: mmu.h  state.h
include/ir/: analysis.h  builder.h  node.h  pass.h
include/main/: dbt.h  executor.h  interpreter.h  ir_dbt.h  signal.h
include/riscv/: abi.h  basic_block.h  context.h  csr.h  decoder.h  disassembler.h  instruction.h  opcode.h  typedef.h
include/softfp/: float.h
include/util/: assert.h  bit_op.h  bitfield.h  format.h  functional.h  int_size.h  macro.h  safe_memory.h  scope_exit.h  select_int.h  small_vector.h
include/x86/: backend.h  decoder.h  disassembler.h  encoder.h  opcode.h
legacy/include/: config.h
legacy/include/emu/: typedef.h  unwind.h
legacy/include/ir/: visit.h
legacy/include/riscv/: frontend.h
legacy/include/softfp/: float.h
legacy/include/util/: code_buffer.h  int128.h  memory.h  multiset.h  reverse_iterable.h
legacy/include/x86/: builder.h  instruction.h
legacy/src/: feature.cc
legacy/src/ir/: block_analysis.cc  dominance.cc  load_store_elimination.cc  lowering.cc  node.cc  scheduler.cc
legacy/src/main/: dbt.cc  signal.cc
legacy/src/riscv/: frontend.cc
legacy/src/util/: code_buffer.cc
legacy/src/x86/: code_generator.cc  decoder.cc  disassembler.cc
lib/atomic_ext/: Cargo.toml
lib/atomic_ext/src/: lib.rs
lib/fdt/: Cargo.toml
lib/fdt/src/: lib.rs  prop_value.rs
lib/fiber/: Cargo.toml  build.rs
lib/fiber/benches/: mutex.rs  rwlock.rs  sleep.rs
lib/fiber/src/: fiber.s  lib.rs  map.rs  mutex.rs  park.rs  raw.rs  rwlock.rs
lib/io/: Cargo.toml
lib/io/src/: entropy.rs  fs.rs  lib.rs
lib/io/src/block/: file.rs  mod.rs  shadow.rs
lib/io/src/hw/: mod.rs
lib/io/src/hw/console/: mod.rs  ns16550.rs
lib/io/src/hw/intc/: clint.rs  mod.rs  plic.rs
lib/io/src/hw/network/: mod.rs  xemaclite.rs
lib/io/src/hw/rtc/: mod.rs  zyncmp.rs
lib/io/src/hw/virtio/: block.rs  console.rs  mmio.rs  mod.rs  network.rs  p9.rs  queue.rs  rng.rs
lib/io/src/network/: logger.rs  mod.rs  usernet.rs
lib/io/src/serial/: console.rs  mod.rs
lib/io/src/system/: config.rs  mod.rs
lib/offset_of/: Cargo.toml
lib/offset_of/src/: lib.rs
lib/p9/: Cargo.toml
lib/p9/src/: lib.rs  passthrough.rs  serialize.rs
lib/riscv/: Cargo.toml
lib/riscv/src/: csr.rs  decode.rs  disasm.rs  lib.rs  mmu.rs  op.rs
lib/ro_cell/: Cargo.toml
lib/ro_cell/src/: lib.rs
lib/softfp/: Cargo.toml  README.md
lib/softfp/src/: fp.rs  int.rs  lib.rs
lib/usernet/: Cargo.toml
lib/usernet/src/: config.rs  lib.rs  slirp.rs  util.rs
lib/x86/: Cargo.toml
lib/x86/src/: decode.rs  disasm.rs  encode.rs  lib.rs  op.rs
src/: config.rs  main.rs
src/dbt/: helper.s  mod.rs
src/emu/: abi.rs  bin_loader.cc  dbt.rs  elf_loader.cc  event.rs  event.s  helper.s  interp.rs  loader.rs  mmu.cc  mod.rs  safe_memory.rs  safe_memory.s  signal.rs  state.cc  syscall.cc  syscall.rs
src/fiber/: fiber.s  mod.rs
src/io/: clint.rs  console.rs  mod.rs  plic.rs  rtc.rs
src/io/block/: mod.rs  shadow.rs
src/io/network/: logger.rs  mod.rs  slirp.rs  usernet.rs  xemaclite.rs
src/io/virtio/: block.rs  console.rs  mmio.rs  mod.rs  network.rs  p9.rs  queue.rs  rng.rs
src/ir/: dot_printer.cc  local_load_store_elimination.cc  local_value_numbering.cc  lowering.cc  visit.cc
src/main/: dbt.cc  interpreter.cc  ir_dbt.cc  main.cc  signal.cc
src/riscv/: csr.rs  decode.rs  decoder.cc  disasm.rs  disassembler.cc  interp.rs  mod.rs  op.rs  step.cc
src/sim/: mod.rs  model.rs
src/sim/memory/: cache_set.rs  mod.rs  replacement_policy.rs
src/sim/memory/cache/: assoc.rs  mod.rs
src/sim/memory/mesi/: cache_model.rs  coherence.rs  mod.rs
src/sim/memory/tlb/: assoc.rs  mod.rs
src/sim/pipeline/: in_order.rs  mod.rs
src/softfp/: float.cc
src/util/: assert.cc  atomic_ext.rs  atomic_min_max.rs  code.rs  format.cc  int.rs  mod.rs  ro_cell.rs  safe_memory.cc  spin.rs
src/x86/: decode.rs  disasm.rs  encode.rs  encoder.cc  lowering.cc  mod.rs  op.rs  register_allocator.cc
visualizer/: generate.js  template.html
