[package]
name = "rvm"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[workspace]
members = ["lib/softfp", "lib/p9", "lib/x86", "lib/riscv", "lib/fdt", "lib/libslirp-sys", "lib/usernet"]

[build-dependencies]
cc = "1.0"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
libc = "0.2"
rand = "0.7"
fnv = "1.0"
byteorder = "1.3"
lazy_static = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
usernet = { path = "lib/usernet", optional = true }
eui48 = "0.4"
lock_api = "0.3"
parking_lot = "0.9"
futures = "0.3"
async-trait = "0.1"
softfp = { path = "lib/softfp" }
p9 = { path = "lib/p9" }
x86 = { path = "lib/x86" }
riscv = { path = "lib/riscv" }
fdt = { path = "lib/fdt" }

[patch.crates-io]
libslirp-sys = { path = "lib/libslirp-sys" }

[profile.dev]
opt-level = "z"
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[features]
default = ["usernet", "float"]
float = []
direct = []
sanitize = []
