[package]
name = "r2vm"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[workspace]
members = [
    "lib/softfp",
    "lib/p9",
    "lib/x86",
    "lib/riscv",
    "lib/fdt",
    "lib/usernet",
    "lib/atomic_ext",
    "lib/fiber",
    "lib/io",
]

[build-dependencies]
cc = "1.0"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
libc = "0.2"
rand = "0.7"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
eui48 = "0.4"
lock_api = "0.3"
parking_lot = "0.9"
futures = "0.3"
once_cell = "1.3"
memoffset = "0.5"
softfp = { path = "lib/softfp" }
p9 = { path = "lib/p9" }
x86 = { path = "lib/x86" }
riscv = { path = "lib/riscv" }
fdt = { path = "lib/fdt" }
atomic_ext = { path = "lib/atomic_ext" }
fiber = { path = "lib/fiber" }
io = { path = "lib/io" }

[profile.dev]
opt-level = "z"
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[features]
default = ["usernet", "float", "simcsr"]
usernet = ["io/network-usernet"]
float = []
direct = []
sanitize = []
simcsr = []
