[package]
name = "r2vm"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[workspace]
members = [
    "lib/p9",
    "lib/x86",
    "lib/riscv",
    "lib/fdt",
    "lib/usernet",
    "lib/fiber",
    "lib/ro_cell",
    "lib/io",
]

[build-dependencies]
cc = "1.0"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
libc = "0.2"
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
eui48 = { version = "1.1", default-features = false }
lock_api = "0.4"
parking_lot = "0.11"
futures = "0.3"
once_cell = "1.3"
memoffset = "0.6"
softfp = { version = "0.1", default-features = false }
p9 = { path = "lib/p9" }
x86 = { path = "lib/x86" }
riscv = { path = "lib/riscv" }
fdt = { path = "lib/fdt" }
fiber = { path = "lib/fiber" }
ro_cell = { path = "lib/ro_cell" }
io = { path = "lib/io", features = ["serde"] }

[profile.dev]
opt-level = "z"
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[features]
default = ["usernet", "float", "simcsr"]
usernet = ["io/network-usernet"]
float = []
direct = []
sanitize = []
simcsr = []
