[package]
name = "dbt"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
libc = "0.2"
rand = "0.6"
fnv = "1.0"

[lib]
name = "dbt"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
