[package]
name = "io"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
futures = "0.3"
lock_api = "0.3"
parking_lot = "0.9"
log = "0.4"
once_cell = "1.3"
fnv = { version = "1.0", optional = true }
rand = { version = "0.7", optional = true }
byteorder = { version = "1.3", optional = true }
usernet = { path = "../usernet", optional = true }
p9 = { path = "../p9", optional = true }

[features]
default = ["block-file", "block-shadow", "network", "entropy", "fs", "hw-clint", "hw-plic", "rtc-zyncmp"]
block = []
block-file = ["block"]
block-shadow = ["block", "fnv"]
network = []
network-logger = ["network", "byteorder"]
network-usernet = ["network", "usernet"]
entropy = ["rand"]
fs = ["p9"]
hw-clint = []
hw-plic = []
rtc-zyncmp = []
