[package]
name = "io"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
futures = "0.3"
lock_api = "0.3"
parking_lot = "0.9"
log = "0.4"
once_cell = "1.3"
eui48 = { version = "0.4", optional = true }
fnv = { version = "1.0", optional = true }
rand = { version = "0.7", optional = true }
rand_chacha = { version = "0.2", optional = true }
byteorder = { version = "1.3", optional = true }
libc = { version = "0.2", optional = true }
usernet = { path = "../usernet", optional = true }
p9 = { path = "../p9", optional = true }
fdt = { path = "../fdt", optional = true }


[features]
default = [
    "block-file",
    "block-shadow",
    "entropy",
    "fs",
    "intc-clint",
    "intc-plic",
    "rtc-zyncmp",
    "network-xemaclite",
    "serial-console",
    "virtio-block",
    "virtio-network",
    "virtio-rng",
    "virtio-p9",
    "virtio-console",
]
block-file = []
block-shadow = ["fnv"]
network-logger = ["byteorder"]
network-usernet = ["usernet"]
entropy = ["rand", "rand_chacha"]
fs = ["p9"]
intc-clint = []
intc-plic = []
rtc-zyncmp = []
network-xemaclite = ["byteorder", "fdt"]
serial-console = ["libc"]
virtio = []
virtio-block = ["virtio"]
virtio-network = ["virtio", "eui48"]
virtio-rng = ["virtio", "entropy"]
virtio-p9 = ["virtio", "fs"]
virtio-console = ["virtio"]
