[package]
name = "usernet"
description = "Userspace networking emulation"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
libslirp-sys = "4.0.0"
parking_lot = "0.9"
libc = "0.2"
log = "0.4"

[patch.crates-io]
libslirp-sys = { git = "https://gitlab.freedesktop.org/slirp/libslirp-sys.git" }
